# Ogre2Test

./: LICENSE  README.md
ogreTest/: CMakeLists.txt  makefile  ogreTest.sln  plugins.cfg.linux  readme  readme.md
ogreTest/ogreTest/: ogreTest.vcxproj  ogreTest.vcxproj.filters
ogreTest/sources/: main.cpp
ogreTest/x64/Debug/: plugins.cfg
ogreTest/x64/Release/: plugins.cfg
ogreTest/x64/Release/media/Sinbad/: Sinbad.material
